# py-edge-driver

./: pyproject.toml
src/py_edge_driver/: __init__.py  bufferx.py  driver.py  handler_protocol.py  polled.py
